fix: lab canvas overflow

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -137,3 +137,10 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+/**
+ * Custom
+ * -------------------------------------------------------------------------- */
+
+#VPContent {
+  overflow: hidden;
+}
